--- a/gradle.properties
+++ b/gradle.properties
@@ -53,10 +53,10 @@ terrablender_neoforge_version=5673063
 terrablender_fabric_version=5673064
 byg_neoforge_version=???
 corgilib_neoforge_version=???
-geckolib_neoforge_version=???
+geckolib_neoforge_version=4.6.2
 create_neoforge_version=???
 create_fabric_version=???
-ars_neoforge_version=???
+ars_neoforge_version=5673248
 twilightforest_forge_version=???
 sewingkit_version=2.0.4
 more_food_neoforge_version=5514755
