Move to mod-publish-plugin.

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,8 @@ plugins {
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'org.spongepowered.mixin' version '0.7.+'
-    id 'net.darkhax.curseforgegradle' version '1.+'
     id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.71.8'
-    id 'com.modrinth.minotaur' version '2.+'
+    id 'me.modmuss50.mod-publish-plugin' version '0.7.3'
 }
 
 repositories {
@@ -259,73 +258,74 @@ task signJar(type: SignJar, dependsOn: jar) {
     outputFile = jar.archiveFile
 }
 
-task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
-    if (project.hasProperty('hscurseApiKey')) {
-        apiToken = project.hscurseApiKey
-        def mainFile = upload(project.hscurseId, file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
-        mainFile.changelog = file('build/libs/' + project.getName() + '-' + version + '-changelog.txt')
-        mainFile.addJavaVersion('Java 17')
-        mainFile.addModLoader('Forge')
-        mainFile.releaseType = "${release_type}"
-        "${release_versions}".split(',').each {
-            mainFile.addGameVersion("${it}")
-        }
-        mainFile.addOptional('configured')
-        mainFile.addOptional('catalogue')
-        mainFile.addOptional('jei')
-        mainFile.addOptional('simpletextoverlay')
-        mainFile.addOptional('serene-seasons')
-        mainFile.addOptional('biomes-o-plenty')
-        mainFile.addOptional('oh-the-biomes-youll-go')
-        mainFile.addOptional('croptopia')
-        mainFile.addOptional('farmers-delight')
-        mainFile.addOptional('xercamod')
-        mainFile.addOptional('kitteh6660s-morecraft')
-        mainFile.addOptional('sophisticated-backpacks')
-        mainFile.addOptional('ecologics')
-        mainFile.addOptional('ars-nouveau')
-        mainFile.addOptional('sprout')
-        mainFile.addOptional('create-cafe')
-        mainFile.addOptional('fruit-trees')
-        mainFile.addOptional('leave-my-bars-alone')
-        mainFile.addOptional('create')
-        mainFile.addOptional('patchouli')
-        mainFile.addOptional('scuba-gear')
-        mainFile.addOptional('kobolds')
-        mainFile.addOptional('the-twilight-forest')
-        mainFile.addOptional('primal-winter')
-        mainFile.addOptional('tinkers-construct')
-        mainFile.addOptional('sewing-kit')
-    }
-}
+def changelogFile = project(":").projectDir.toString() + '/build/libs/' + project.getName() + '-' + version + '-changelog.txt'
+def publishFile = project(":").projectDir.toString() + "/build/libs/${archivesBaseName}-${version}.jar"
 
-modrinth {
+publishMods {
+    file = file(publishFile)
+    if (file(changelogFile).exists()) {
+        changelog = file(changelogFile).text
+    }
+    type = "${release_type}".startsWith("release") ? STABLE : ("${release_type}".startsWith("beta") ? BETA : ALPHA)
+    modLoaders.addAll(['forge'])
+
+    if (project.hasProperty('hscurseApiKey')) {
+        curseforge {
+            accessToken = project.hscurseApiKey
+            projectId = project.hscurseId
+            javaVersions.add(JavaVersion.toVersion("${java_version}"))
+            clientRequired = true
+            serverRequired = true
+            minecraftVersions.addAll("${release_versions}".split(','))
+            embeds('spectrelib')
+            optional('configured')
+            optional('catalogue')
+            optional('jei')
+            optional('simpletextoverlay')
+            optional('serene-seasons')
+            optional('biomes-o-plenty')
+            optional('oh-the-biomes-youll-go')
+            optional('croptopia')
+            optional('farmers-delight')
+            optional('xercamod')
+            optional('kitteh6660s-morecraft')
+            optional('sophisticated-backpacks')
+            optional('ecologics')
+            optional('ars-nouveau')
+            optional('sprout')
+            optional('create-cafe')
+            optional('fruit-trees')
+            optional('leave-my-bars-alone')
+            optional('create')
+            optional('patchouli')
+            optional('scuba-gear')
+            optional('kobolds')
+            optional('primal-winter')
+            optional('tinkers-construct')
+            optional('sewing-kit')
+        }
+    }
     if (project.hasProperty('hsModrinthId')) {
-        token = project.modrinthKey
-        projectId = project.hsModrinthId
-        version = getVersion()
-        versionType = "${release_type}"
-        def changelogFile = 'build/libs/' + project.getName() + '-' + version + '-changelog.txt'
-        if (file(changelogFile).exists()) {
-            changelog = file(changelogFile).text
+        modrinth {
+            accessToken = project.modrinthKey
+            projectId = project.hsModrinthId
+            minecraftVersions.addAll("${release_versions}".split(','))
+            optional('create')
+            optional('ecologics')
+            optional('create-cafe')
+            optional('scuba-gear')
+            optional('farmers-delight')
+            optional('xercamod')
+            optional('leave-my-bars-alone')
+            optional('sprout')
+            optional('patchouli')
+            optional('jei')
+            optional('biomesyougo')
+            optional('kobolds')
+            optional('primal-winter')
+            optional('tinkers-construct')
         }
-        uploadFile = file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")
-        gameVersions = "${release_versions}".split(",") as List<String>
-        dependencies {
-            optional.project "create"
-            optional.project "ecologics"
-            optional.project "create-cafe"
-            optional.project "scuba-gear"
-            optional.project "farmers-delight"
-            optional.project "xercamod"
-            optional.project "leave-my-bars-alone"
-            optional.project "sprout"
-            optional.project "patchouli"
-            optional.project "jei"
-            optional.project "biomesyougo"
-            optional.project "kobolds"
-            optional.project "primal-winter"
-            optional.project "tinkers-construct"
-        }
+    }
+    if (project.hasProperty('hsGithubToken')) {
     }
 }
