--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.daemon=false
 # Version
 mod_version=2.9.6.1
 last_mod_version=2.9.6.0
+java_version=17
 
 # Common
 minecraft_version=1.19.2
