--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '[6.0,6.2)' apply(false)
     id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT' apply(false)
     id 'org.spongepowered.mixin' version "0.7-SNAPSHOT" apply(false)
+    id 'me.modmuss50.mod-publish-plugin' version '0.7.3' apply(false)
 }
 allprojects {
     apply plugin: 'java'
