--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.daemon=false
 # Project
 mod_version=2.9.9.1
 last_mod_version=2.9.8.2
+java_version=17
 
 # Common
 minecraft_version=1.20.1
