Shift to 1.21.1 only. Add testing mods.

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -58,6 +58,10 @@ dependencies {
         //modRuntimeOnly "curse.maven:terrablender-565956:${terrablender_fabric_version}"
         //modRuntimeOnly "curse.maven:simpletextoverlay-321283:${simpletextoverlay_fabric_version}"
         //modRuntimeOnly "curse.maven:more_food-874343:${more_food_fabric_version}"
+        modRuntimeOnly "curse.maven:colorful_hearts-854213:${colorful_hearts_fabric_version}"
+        //modRuntimeOnly "curse.maven:puzzles_lib-495476:${puzzles_lib_fabric_version}"
+        //modRuntimeOnly "curse.maven:forge_config_api_port-547434:${forge_config_api_fabric_version}"
+        //modRuntimeOnly "curse.maven:lmba-281715:${lmba_fabric_version}"
     }
 }
 
