--- a/gradle.properties
+++ b/gradle.properties
@@ -13,17 +13,17 @@ java_version=21
 minecraft_version=1.21.1
 
 # Fabric
-fabric_version=0.102.1+1.21.1
-fabric_loader_version=0.15.11
-fabric_loader_min_version=>=0.15
-fabric_mc_version_range=["1.21","1.21.1"]
+fabric_version=0.105.0+1.21.1
+fabric_loader_version=0.16.5
+fabric_loader_min_version=>=0.16
+fabric_mc_version_range=["1.21.1"]
 mod_menu_version=11.0.1
 
 # NeoForge
 # https://projects.neoforged.net/neoforged/neoforge
 neoforge_version=21.1.64
-neoforge_loader_version_range=[21.0.143,)
-neoforge_mc_version_range=[1.21, 1.22)
+neoforge_loader_version_range=[21.1.1,)
+neoforge_mc_version_range=[1.21.1, 1.22)
 neo_form_version=1.21.1-20240808.144430
 
 # Mappings
@@ -69,6 +69,13 @@ crafttweaker_neoforge_version=5559536
 kubejs_neoforge_version=5580858
 rhino_neoforge_version=5554415
 the_veggie_way_neoforge_version=5587596
+colorful_hearts_neoforge_version=5746319
+colorful_hearts_fabric_version=5746320
+lmba_neoforge_version=5770178
+lmba_fabric_version=5770177
+puzzles_lib_neoforge_version=5772060
+puzzles_lib_fabric_version=5772061
+forge_config_api_fabric_version=5772128
 
 # Mod options
 mod_name=Homeostatic
@@ -83,4 +90,4 @@ mod_update_branch=1.21
 
 # CurseForge/Modrinth Options
 release_type=release
-release_versions=1.21,1.21.1
+release_versions=1.21.1
