Add back datagen for Patchouli book.

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,7 +40,7 @@ architectury_version=13.0.6
 cloth_config_version=15.0.128
 cardinal_components_version=6.1.0
 patchouli_version=1.21-87
-patchouli_provider_version=???
+patchouli_provider_version=1.21.1-1.0.11-Snapshot.3
 serene_seasons_neoforge_version=5661346
 serene_seasons_fabric_version=5661345
 glitch_core_neoforge_version=5660740
