--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation "curse.maven:glitchcore-955399:${glitch_core_neoforge_version}"
     //compileOnly "curse.maven:create-328085:${create_forge_version}"
     implementation "vazkii.patchouli:Patchouli:${patchouli_version}-NEOFORGE-SNAPSHOT"
-    //implementation "xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}"
+    implementation "xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}"
     compileOnly "dev.gigaherz.sewingkit:SewingKit-1.21:${sewingkit_version}"
 
     if (System.getenv('DATA_GEN') != null) {
