--- a/gradle.properties
+++ b/gradle.properties
@@ -76,6 +76,7 @@ lmba_fabric_version=5770177
 puzzles_lib_neoforge_version=5772060
 puzzles_lib_fabric_version=5772061
 forge_config_api_fabric_version=5772128
+vampirism_neoforge_version=5808186
 
 # Mod options
 mod_name=Homeostatic
